Execute database scripts in gitpod.io.

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,7 +2,10 @@ image: gitpod/workspace-mysql
 
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
-  - init: npm install
+  - init: |
+      npm install
+      npm run create_database
+      npm run create_tables
     command: npm run dev
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
